# House_Manager_App

./: .dockerignore  .env.dev  .gitignore  Dockerfile  Dockerfile_dev  LICENSE  README.md  caller.py  db_backup_script.py  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.aws.yml  docker-compose.certbot.yml  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  web.dev.conf
.github/workflows/: deploy_to_aws_with_terraform.yml  deploy_workflow.yml  dev_deploy_workflow.yml  master_house-manager.yml  master_newhousemanager.yml  master_pavlovp.yml  master_ppavlov.yml  master_pphousemanager.yml  terraform.yml
house_manager/: asgi.py  settings.py  urls.py  wsgi.py
house_manager/accounts/: adapters.py  admin.py  apps.py  forms.py  managers.py  mixins.py  models.py  signals.py  urls.py  validators.py  views.py
house_manager/client_bills/: admin.py  apps.py  models.py  urls.py  views.py
house_manager/clients/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  views.py
house_manager/common/: admin.py  apps.py  mixins.py  urls.py  validators.py  views.py
house_manager/house_bills/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
house_manager/houses/: admin.py  apps.py  decorators.py  forms.py  managers.py  mixins.py  models.py  urls.py  views.py
nginx/conf.d/: web.conf
nginx/local/: nginx.conf
nginx/prod/: nginx.conf
postgres_backups/: db_backup_script.py
ssl_renewal/: ssl_renewal_script.py
staticfiles/: robots.txt
staticfiles/images/: google-logo.avif  hero-bg-mobile.avif  hero-bg.avif  login_form.avif  site_logo.avif
staticfiles/scripts/: articlesAnimation.js  backButton.js  backToTop.js  cancelButton.js  clearProfilePicture.js  cookiePopUp.js  editBillsSaveButton.js  exportToPdf.js  export_fix.js  handleBillsOptionsCheckBoxes.js  html2pdf.js  jSignature.js  (+10 more)
templates/: 403.html  404.html  base.html
terraform/: check_keypair.sh  createsuperuser.sh  main.tf  setup-web-container.sh  setup.sh  values.tfvars  variables.tf
(+195 files in other folders)
