[project]
name = "house-manager-app"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "asgiref==3.11.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cloudinary==1.44.1",
    "cryptography==46.0.3",
    "diff-match-patch==20241021",
    "django==6.0",
    "django-allauth==65.13.1",
    "django-axes==8.1.0",
    "django-cloudinary-storage==0.3.0",
    "django-debug-toolbar==6.1.0",
    "django-import-export==4.3.14",
    "et-xmlfile==2.0.0",
    "gunicorn==23.0.0",
    "idna==3.11",
    "oauthlib==3.3.1",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pillow==12.0.0",
    "pip==25.3",
    "psycopg[binary,c]==3.3.2",
    "pycparser==2.23",
    "pyjwt==2.10.1",
    "python-decouple==3.8",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "tablib==3.9.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "wheel==0.45.1",
]
