[project]
name = "house-manager-app"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "asgiref==3.11.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cloudinary==1.44.1",
    "cryptography==46.0.4",
    "diff-match-patch==20241021",
    "django==6.0.1",
    "django-allauth==65.14.0",
    "django-axes==8.1.0",
    "django-cloudinary-storage==0.3.0",
    "django-debug-toolbar==6.2.0",
    "django-import-export==4.4.0",
    "et-xmlfile==2.0.0",
    "gunicorn==24.1.1",
    "idna==3.11",
    "oauthlib==3.3.1",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pillow==12.1.0",
    "pip==26.0",
    "psycopg[binary,c]==3.3.2",
    "pycparser==3.0",
    "pyjwt==2.11.0",
    "python-decouple==3.8",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "setuptools==80.10.2",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "tablib==3.9.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "wheel==0.46.3",
]
